--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fg-loadcss": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-medium-image-zoom": "^5.1.10",
     "react-scripts": "5.0.1",
     "sass": "^1.69.7",
     "web-vitals": "^2.1.4"
